letter-spacing fixing

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
     font-size: 16px;
     font-weight: normal;
     line-height: 1.5;
-    letter-spacing: 0.02em
+    letter-spacing: 0.02em;
 }
 ul{
     list-style-type: none;
@@ -29,7 +29,6 @@ a{
     font-weight: 500;
     color: #2E2F42;
     line-height: 1.5;
-    letter-spacing: 0.02em
 }
 .nav_bar a:hover,
 .nav_bar a:focus{
@@ -42,7 +41,6 @@ a{
     color: #434455;
     line-height: 1.5;
     font-style: normal;
-    letter-spacing: 0.02em
 }
 .nav_bar_contacts a:hover,
 .nav_bar_contacts a:focus{
@@ -57,7 +55,6 @@ a{
     font-size: 56px;
     text-align: center;
     line-height: 1.07;
-    letter-spacing: 0.02em
 }
 .banner_btn{
     font-family: "Roboto", sans-serif;
@@ -99,7 +96,6 @@ a{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-    letter-spacing: 0.02em
 }
 .team_list li{
     background-color: #FFFFFF;
